[package]
name = "union_type"
version = "0.1.0"
authors = ["longfangsong <longfangsong@icloud.com>"]
repository = "https://github.com/longfangsong/union_type"
description = "A proc macro to introduce union type into rust"
documentation = "https://docs.rs/union_type/"
license = "Unlicense"
keywords = ["proc_macro", "procmacro", "type", "enum", "union"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1.0"
syn = { version = "1.0", features = ["full"] }

[workspace]
members = [
    "test"
]